--- a/Producer.ipynb
+++ b/Producer.ipynb
@@ -51,7 +51,7 @@
    ],
    "source": [
     "producer = KafkaProducer(\n",
-    "    bootstrap_servers=['16.16.183.68:9092'],\n",
+    "    bootstrap_servers=[':9092'], # add your public ip which is there in the instance\n",
     "    value_serializer=lambda x: dumps(x).encode('utf-8')\n",
     ")\n",
     "\n",
